--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-langchain 
-langchain-openai 
-langchain-community 
-langchain-text-splitters 
-langchain-core 
-youtube-comment-downloader 
-pandas 
-gradio 
-faiss-cpu 
+langchain==0.3.27
+langchain-core==0.3.76
+langchain-community==0.3.29
+langchain-openai==0.3.11
+langchain-text-splitters==0.3.11
+youtube-comment-downloader
+gradio
+langchain-huggingface
+faiss-cpu
 sentence-transformers
+pandas
